video stretching style fix

--- a/sites/all/themes/cdi/assets/stylesheets/cdi-style.css
+++ b/sites/all/themes/cdi/assets/stylesheets/cdi-style.css
@@ -359,3 +359,8 @@ div.pane-bundle-video .media-vimeo-video, div.pane-bundle-video .media-youtube-v
 	margin-bottom:1em;	
 }
 
+.field-name-field-featured-video {
+	clear:left;
+	position:relative;
+	margin-top:2em;
+}
